--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-        <title>Dragons Database</title>
-        <link href="/css/style.css" rel="stylesheet" type="text/css">
-        <style>
+<head>
+    <title>Dragons Database</title>
+    <link href="/css/style.css" rel="stylesheet" type="text/css">
+    <style>
         html,
         body {
             margin: 0;
@@ -14,30 +14,34 @@
             width: 100%;
         }
     </style>
-    </head>
+</head>
 
-    <body>
+<body>
 
-        <h1>
-            Dragons Database
-        </h1>
+    <h1>
+        Dragon's Hoard
+    </h1>
 
-        <nav class="navbar">
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="abilities">Abilities</a></li>
-                <li><a href="environments">Environments</a></li>
-                <li><a href="types">Types</a></li>
-                <li><a href="dragons">Dragons</a></li>
-            </ul>
-        </nav>
+    <p class="index-desc">
+        A database dedicated to Dragons
+    </p>
 
-        <div class="img-container">
-            <img src="/img/dragon.jpg" alt="dragon" aria-hidden="true"
-                decoding="async">
-        </div>
-        <p class="img-credit">Photo by Nur Andi Ravsanjani Gusma:
-            https://www.pexels.com/photo/gold-dragon-statue-near-gray-concrete-building-5926488/</p>
-    </body>
+    <nav class="navbar">
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="abilities">Abilities</a></li>
+            <li><a href="environments">Environments</a></li>
+            <li><a href="types">Types</a></li>
+            <li><a href="dragons">Dragons</a></li>
+        </ul>
+    </nav>
+
+    <div class="img-container">
+        <img src="/img/purple-dragon.webp" alt="dragon" aria-hidden="true" style="width: 1024px; height: 1024px;"
+            decoding="async">
+    </div>
+    {{!-- <p class="img-credit">Photo by Nur Andi Ravsanjani Gusma:
+        https://www.pexels.com/photo/gold-dragon-statue-near-gray-concrete-building-5926488/</p> --}}
+</body>
 
 </html>
