--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,27 +8,70 @@ body {
     padding: 0;
     box-sizing: border-box;
     line-height: 1.5;
+    background: linear-gradient(to right, #a8c0ff, #3f2b96);
 }
 
 body {
     font-family: 'Lora', serif;
+    display: flex;
+    flex-direction: column;
 }
 
+.content-wrapper {
+    margin-top: 20px;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 50px;
+}
 
 .navbar {
     text-align: center;
+    background: rgba(255, 255, 255, 0.8);
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+    font-size: 2.5em;
+    margin-bottom: 0;
+}
+
+.index-desc {
+    text-align: center;
+    font-family: 'Cinzel';
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    color: #f4f4f2;
+    margin-top: 0;
+    font-size: max(16px, 1.5rem);
+}
+
+h2 {
+    font-size: 2em;
+}
+
+legend {
+    font-size: 1.5em;
+    font-weight: bold;
+    padding: 10px;
+    border-bottom: 2px solid #ccc;
+    width: max-content;
+    margin: auto;
 }
 
 h1, h2, legend {
     font-family: 'Cinzel', serif;
     text-align: center;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    color: #f4f4f2;
 }
-
 
 .navbar ul {
     list-style-type: none;
-    display: inline-block;
+    padding: 10px;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .navbar li {
@@ -36,20 +79,19 @@ h1, h2, legend {
 }
 
 .navbar a {
+    font-family: 'Cinzel', serif;
+    font-size: 1.1rem;
+    font-weight: 700;
+    color: #000;
     text-decoration: none;
-    position: relative;
-    font-weight: bold;
-    padding: 15px 20px;
-    margin: 0 5px;
-    border-radius: 1px;
-    border-right: 1px solid black;
+    padding: 0.5rem 1rem;
+    border-radius: 4px;
+    transition: color 0.3s ease, background-color 0.3s ease;
 }
 
-
-.navbar a:hover {
-    color: #333;
-    text-decoration: underline;
-    transition: all 0.3s ease;
+.navbar a:hover, .navbar a:focus {
+    color: #EBC6A1;
+    background-color: rgba(255, 255, 255, 0.2);
 }
 
 .navbar li:last-child a {
@@ -58,16 +100,20 @@ h1, h2, legend {
 
 .img-container {
     position: relative;
+    width: 100%;
     overflow: hidden;
     height: 100%;
+    background: linear-gradient(180deg, #00203F 0%, #ADEFD1 100%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .img-container img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    max-width: 100%;
     position: absolute;
-    top: -15%;
+    object-fit: contain;
+    top: -23%;
 }
 
 .img-credit {
@@ -84,7 +130,6 @@ h1, h2, legend {
 #browse p {
     text-align: center;
 }
-
 
 .flex-container {
     display: flex;
@@ -105,88 +150,94 @@ h1, h2, legend {
 }
 
 #browse {
-    padding-left: 20px;
     padding-right: 20px;
-}
-
-#dragons-table tbody tr td:nth-child(12) {
-    max-width: 200px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
 }
 
 table {
     border-collapse: collapse;
     table-layout: auto;
-    width: 100%;
+    width: auto;
     margin: 0 auto;
+    margin-top: 10px;
     overflow-x: auto;
+    margin-bottom: 10px;
 
     th {
         font-family: 'Cinzel', serif;
-        font-size: 0.9rem;
+        cursor: pointer;
         background-color: #333;
         color: #fff;
     }
 
     td {
         font-family: 'Lora', serif;
-        font-size: 0.9rem;
+        word-wrap: break-word;
         max-width: 200px;
-
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
     }
 
     th,
     td {
         border: 1px solid black;
-        padding: 1rem;
-        font-size: 0.9rem;
-
+        padding: 4px 8px;
+        font-size: max(16px, 1vw);
+        box-sizing: border-box
     }
 
-    tbody tr:nth-child(odd) {
+    tr td:nth-child(n+2) {
         background-color: #f9f9f9;
     }
 
-    tbody tr:nth-child(even) {
+    tr:nth-child(odd) td:nth-child(n+2) {
         background-color: #e9e9e9;
     }
 
-    td:last-child {
-        text-align: center;
-        max-width: 120px;
+    th:first-child {
+        visibility: hidden;
+        border: none;
+
     }
 
-    td:nth-last-child(2) {
-        text-align: center;
-        max-width: 120px;
+    td.icon-flex {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 
+    td:first-child {
+        margin-bottom: 12px !important;
+        border: none;
+        text-align: right;
+    }
 }
 
 form {
     width: 80%;
     margin: 0 auto;
     padding: 20px;
-}
 
-label {
-    display: block;
-    margin-bottom: 10px;
+    label {
+        display: block;
+        margin-bottom: 10px;
+        color: #333;
+        font-weight: bold;
+    }
 }
 
 button {
     padding: 10px 20px;
     box-sizing: border-box;
-    font-size: 16px;
+    font-size: 14px !important;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     width: auto;
     margin: 0 auto;
-    word-wrap: break-word;
+    word-wrap: keep-all;
 }
 
 input[type="text"],
@@ -201,7 +252,12 @@ select {
     font-size: 16px;
 }
 
-.edit-btn,
+td button,
+td input[type="submit"],
+td input[type="button"] {
+    max-width: 100% !important;
+}
+
 input[type="submit"],
 input[type="button"] {
     background-color: #007bff;
@@ -214,33 +270,34 @@ input[type="button"] {
     font-size: 18px;
 }
 
+.button-container {
+    display: flex;
+    align-items: flex-end;
+}
+
 .new-button-container {
-    border: none;
-    text-align: center;
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+}
+
+.toggle-btn-container {
+    position: absolute;
+    right: 0;
+    margin-right: 250px;
+    margin-top: 20px;
+}
+
+.table-data-label {
+    color: #E9E9E9;
+    margin: 0;
+    margin-left: -10px;
 }
 
 .new-btn {
-    background-color: green;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
+    position: relative;
     cursor: pointer;
-    border-radius: 5px;
-    margin-top: 10px;
-    margin: 10px auto;
-    display: block;
-    font-size: 18px;
-}
-
-.delete-btn {
-    background-color: red;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    border-radius: 5px;
-    margin-top: 10px;
-    font-size: 18px;
+    width: 100%;
 }
 
 .edit-btn,
@@ -249,6 +306,7 @@ input[type="button"] {
     text-align: center;
     width: auto;
     margin: 0 auto;
+    cursor: pointer;
 }
 
 .btn-cancel {
@@ -264,8 +322,6 @@ input[type="button"] {
     transition: all 0.3s ease;
 }
 
-
-
 button:hover {
     transform: scale(1.05);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -280,15 +336,71 @@ input[type="button"]:hover {
     transition: all 0.3s ease;
 }
 
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked+.slider {
+    background-color: #2196F3;
+}
+
+input:focus+.slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked+.slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
+
 .error-message {
     color: red;
     font-size: 14px;
 }
 
-legend {
-    font-size: 20px;
-    font-weight: bold;
-}
 
 input[type="submit"]:focus,
 input[type="button"]:focus {
@@ -302,6 +414,17 @@ input[type="button"]:focus {
     box-sizing: border-box;
 }
 
+.main-search-box-container {
+    position: absolute;
+    right: 0;
+    margin-right: 20px;
+
+}
+
+#searchInput {
+    width: auto;
+}
+
 .faux-option {
     width: 10%;
     display: block;
@@ -312,7 +435,8 @@ input[type="button"]:focus {
 }
 
 .faux-option.selected {
-    background-color: #e9e9e9;
+    color: white;
+    background-color: #007bff;
 }
 
 @media (max-width: 600px) {
@@ -359,5 +483,19 @@ input[type="button"]:focus {
         padding: .5rem;
         font-size: 0.8em;
 
+    }
+
+    table td button,
+    table td input[type="submit"],
+    table td input[type="button"] {
+        width: calc(100% - 20px);
+        margin: 10px 0;
+        padding: 10px;
+    }
+
+    .img-container img {
+        max-width: 100%;
+        object-fit: contain;
+        top: -37%;
     }
 }
