--- a/views/dragons.hbs
+++ b/views/dragons.hbs
@@ -5,7 +5,7 @@
 <head>
     <title>Dragons</title>
     <link href="/css/style.css" rel="stylesheet" type="text/css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" defer></script>
 
     <script src="./js/dragons/show_dragon_data.js" defer></script>
 </head>
