--- a/views/environments.hbs
+++ b/views/environments.hbs
@@ -10,7 +10,7 @@ populateUpdateForm is original code
 <head>
     <title>Dragon Environments</title>
     <link href="/css/style.css" rel="stylesheet" type="text/css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script language="JavaScript">
         function showform(dowhat) {
             /*
