--- a/views/dragons.hbs
+++ b/views/dragons.hbs
@@ -328,6 +328,7 @@
         <script src="./js/toLocaleString.js" defer></script>
         <script src="./js/sortByColumnName.js" defer></script>
         <script src="./js/searchTables.js" defer></script>
+        <script src="./js/trimTableData.js" defer></script>
 
     </div>
 </body>
