--- a/views/environments.hbs
+++ b/views/environments.hbs
@@ -225,6 +225,7 @@ populateUpdateForm is original code
     <script src="./js/sortByColumnName.js" defer></script>
     <script src="./js/searchTables.js" defer></script>
     <script src="./js/toggle-table-data.js" defer></script>
+    <script src="./js/trimTableData.js" defer></script>
 </body>
 
 </html>
